table and chart tooltip styling

--- a/content/data/animals/slaughter/united-states/latest/index.html
+++ b/content/data/animals/slaughter/united-states/latest/index.html
@@ -468,40 +468,40 @@ toc: no
       </th>
     </tr>
     <tr class="gt_col_headings">
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="2020">2020</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="2021">2021</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="2022">2022</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="2020">2020</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="2021">2021</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="2022">2022</th>
     </tr>
   </thead>
   <tbody class="gt_table_body">
-    <tr><th id="stub_1_1" scope="row" class="gt_row gt_center gt_stub">Chickens</th>
-<td headers="stub_1_1 2020" class="gt_row gt_center">9346660000</td>
-<td headers="stub_1_1 2021" class="gt_row gt_center">9325584000</td>
-<td headers="stub_1_1 2022" class="gt_row gt_center">9545720000</td></tr>
-    <tr><th id="stub_1_2" scope="row" class="gt_row gt_center gt_stub">Turkeys</th>
-<td headers="stub_1_2 2020" class="gt_row gt_center">223003000</td>
-<td headers="stub_1_2 2021" class="gt_row gt_center">215663000</td>
-<td headers="stub_1_2 2022" class="gt_row gt_center">208225000</td></tr>
-    <tr><th id="stub_1_3" scope="row" class="gt_row gt_center gt_stub">Ducks</th>
-<td headers="stub_1_3 2020" class="gt_row gt_center">22484000</td>
-<td headers="stub_1_3 2021" class="gt_row gt_center">24301000</td>
-<td headers="stub_1_3 2022" class="gt_row gt_center">26657000</td></tr>
-    <tr><th id="stub_1_4" scope="row" class="gt_row gt_center gt_stub">Cattle</th>
-<td headers="stub_1_4 2020" class="gt_row gt_center">32885300</td>
-<td headers="stub_1_4 2021" class="gt_row gt_center">33946600</td>
-<td headers="stub_1_4 2022" class="gt_row gt_center">34421900</td></tr>
-    <tr><th id="stub_1_5" scope="row" class="gt_row gt_center gt_stub">Hogs</th>
-<td headers="stub_1_5 2020" class="gt_row gt_center">131639000</td>
-<td headers="stub_1_5 2021" class="gt_row gt_center">129062400</td>
-<td headers="stub_1_5 2022" class="gt_row gt_center">125400200</td></tr>
-    <tr><th id="stub_1_6" scope="row" class="gt_row gt_center gt_stub">Sheep, including lambs</th>
-<td headers="stub_1_6 2020" class="gt_row gt_center">2318400</td>
-<td headers="stub_1_6 2021" class="gt_row gt_center">2355200</td>
-<td headers="stub_1_6 2022" class="gt_row gt_center">2166600</td></tr>
-    <tr><th id="stub_1_7" scope="row" class="gt_row gt_center gt_stub">Goats</th>
-<td headers="stub_1_7 2020" class="gt_row gt_center">624400</td>
-<td headers="stub_1_7 2021" class="gt_row gt_center">598500</td>
-<td headers="stub_1_7 2022" class="gt_row gt_center">607300</td></tr>
+    <tr><th id="stub_1_1" scope="row" class="gt_row gt_left gt_stub">Chickens</th>
+<td headers="stub_1_1 2020" class="gt_row gt_right">9,346,660,000</td>
+<td headers="stub_1_1 2021" class="gt_row gt_right">9,325,584,000</td>
+<td headers="stub_1_1 2022" class="gt_row gt_right">9,545,720,000</td></tr>
+    <tr><th id="stub_1_2" scope="row" class="gt_row gt_left gt_stub">Turkeys</th>
+<td headers="stub_1_2 2020" class="gt_row gt_right">223,003,000</td>
+<td headers="stub_1_2 2021" class="gt_row gt_right">215,663,000</td>
+<td headers="stub_1_2 2022" class="gt_row gt_right">208,225,000</td></tr>
+    <tr><th id="stub_1_3" scope="row" class="gt_row gt_left gt_stub">Ducks</th>
+<td headers="stub_1_3 2020" class="gt_row gt_right">22,484,000</td>
+<td headers="stub_1_3 2021" class="gt_row gt_right">24,301,000</td>
+<td headers="stub_1_3 2022" class="gt_row gt_right">26,657,000</td></tr>
+    <tr><th id="stub_1_4" scope="row" class="gt_row gt_left gt_stub">Cattle</th>
+<td headers="stub_1_4 2020" class="gt_row gt_right">32,885,300</td>
+<td headers="stub_1_4 2021" class="gt_row gt_right">33,946,600</td>
+<td headers="stub_1_4 2022" class="gt_row gt_right">34,421,900</td></tr>
+    <tr><th id="stub_1_5" scope="row" class="gt_row gt_left gt_stub">Hogs</th>
+<td headers="stub_1_5 2020" class="gt_row gt_right">131,639,000</td>
+<td headers="stub_1_5 2021" class="gt_row gt_right">129,062,400</td>
+<td headers="stub_1_5 2022" class="gt_row gt_right">125,400,200</td></tr>
+    <tr><th id="stub_1_6" scope="row" class="gt_row gt_left gt_stub">Sheep, including lambs</th>
+<td headers="stub_1_6 2020" class="gt_row gt_right">2,318,400</td>
+<td headers="stub_1_6 2021" class="gt_row gt_right">2,355,200</td>
+<td headers="stub_1_6 2022" class="gt_row gt_right">2,166,600</td></tr>
+    <tr><th id="stub_1_7" scope="row" class="gt_row gt_left gt_stub">Goats</th>
+<td headers="stub_1_7 2020" class="gt_row gt_right">624,400</td>
+<td headers="stub_1_7 2021" class="gt_row gt_right">598,500</td>
+<td headers="stub_1_7 2022" class="gt_row gt_right">607,300</td></tr>
   </tbody>
   
   
@@ -957,40 +957,40 @@ toc: no
       </th>
     </tr>
     <tr class="gt_col_headings">
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="Feb 2023">Feb 2023</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="Mar 2023">Mar 2023</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="Apr 2023">Apr 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Jun 2023">Jun 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Jul 2023">Jul 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Aug 2023">Aug 2023</th>
     </tr>
   </thead>
   <tbody class="gt_table_body">
-    <tr><th id="stub_1_1" scope="row" class="gt_row gt_center gt_stub">Chickens</th>
-<td headers="stub_1_1 Feb 2023" class="gt_row gt_center">739997000</td>
-<td headers="stub_1_1 Mar 2023" class="gt_row gt_center">826596000</td>
-<td headers="stub_1_1 Apr 2023" class="gt_row gt_center">733054000</td></tr>
-    <tr><th id="stub_1_2" scope="row" class="gt_row gt_center gt_stub">Turkeys</th>
-<td headers="stub_1_2 Feb 2023" class="gt_row gt_center">15975000</td>
-<td headers="stub_1_2 Mar 2023" class="gt_row gt_center">18914000</td>
-<td headers="stub_1_2 Apr 2023" class="gt_row gt_center">16367000</td></tr>
-    <tr><th id="stub_1_3" scope="row" class="gt_row gt_center gt_stub">Ducks</th>
-<td headers="stub_1_3 Feb 2023" class="gt_row gt_center">2177000</td>
-<td headers="stub_1_3 Mar 2023" class="gt_row gt_center">2304000</td>
-<td headers="stub_1_3 Apr 2023" class="gt_row gt_center">2173000</td></tr>
-    <tr><th id="stub_1_4" scope="row" class="gt_row gt_center gt_stub">Cattle</th>
-<td headers="stub_1_4 Feb 2023" class="gt_row gt_center">2548300</td>
-<td headers="stub_1_4 Mar 2023" class="gt_row gt_center">2938700</td>
-<td headers="stub_1_4 Apr 2023" class="gt_row gt_center">2543800</td></tr>
-    <tr><th id="stub_1_5" scope="row" class="gt_row gt_center gt_stub">Hogs</th>
-<td headers="stub_1_5 Feb 2023" class="gt_row gt_center">9974300</td>
-<td headers="stub_1_5 Mar 2023" class="gt_row gt_center">11464500</td>
-<td headers="stub_1_5 Apr 2023" class="gt_row gt_center">9770400</td></tr>
-    <tr><th id="stub_1_6" scope="row" class="gt_row gt_center gt_stub">Sheep, including lambs</th>
-<td headers="stub_1_6 Feb 2023" class="gt_row gt_center">138300</td>
-<td headers="stub_1_6 Mar 2023" class="gt_row gt_center">179100</td>
-<td headers="stub_1_6 Apr 2023" class="gt_row gt_center">156900</td></tr>
-    <tr><th id="stub_1_7" scope="row" class="gt_row gt_center gt_stub">Goats</th>
-<td headers="stub_1_7 Feb 2023" class="gt_row gt_center">45100</td>
-<td headers="stub_1_7 Mar 2023" class="gt_row gt_center">55800</td>
-<td headers="stub_1_7 Apr 2023" class="gt_row gt_center">48600</td></tr>
+    <tr><th id="stub_1_1" scope="row" class="gt_row gt_left gt_stub">Chickens</th>
+<td headers="stub_1_1 Jun 2023" class="gt_row gt_right">812,360,000</td>
+<td headers="stub_1_1 Jul 2023" class="gt_row gt_right">770,306,000</td>
+<td headers="stub_1_1 Aug 2023" class="gt_row gt_right">861,590,000</td></tr>
+    <tr><th id="stub_1_2" scope="row" class="gt_row gt_left gt_stub">Turkeys</th>
+<td headers="stub_1_2 Jun 2023" class="gt_row gt_right">19,300,000</td>
+<td headers="stub_1_2 Jul 2023" class="gt_row gt_right">17,136,000</td>
+<td headers="stub_1_2 Aug 2023" class="gt_row gt_right">19,924,000</td></tr>
+    <tr><th id="stub_1_3" scope="row" class="gt_row gt_left gt_stub">Ducks</th>
+<td headers="stub_1_3 Jun 2023" class="gt_row gt_right">2,488,000</td>
+<td headers="stub_1_3 Jul 2023" class="gt_row gt_right">2,320,000</td>
+<td headers="stub_1_3 Aug 2023" class="gt_row gt_right">2,422,000</td></tr>
+    <tr><th id="stub_1_4" scope="row" class="gt_row gt_left gt_stub">Cattle</th>
+<td headers="stub_1_4 Jun 2023" class="gt_row gt_right">2,894,300</td>
+<td headers="stub_1_4 Jul 2023" class="gt_row gt_right">2,597,800</td>
+<td headers="stub_1_4 Aug 2023" class="gt_row gt_right">2,889,900</td></tr>
+    <tr><th id="stub_1_5" scope="row" class="gt_row gt_left gt_stub">Hogs</th>
+<td headers="stub_1_5 Jun 2023" class="gt_row gt_right">10,425,700</td>
+<td headers="stub_1_5 Jul 2023" class="gt_row gt_right">9,616,000</td>
+<td headers="stub_1_5 Aug 2023" class="gt_row gt_right">11,122,700</td></tr>
+    <tr><th id="stub_1_6" scope="row" class="gt_row gt_left gt_stub">Sheep, including lambs</th>
+<td headers="stub_1_6 Jun 2023" class="gt_row gt_right">148,800</td>
+<td headers="stub_1_6 Jul 2023" class="gt_row gt_right">130,900</td>
+<td headers="stub_1_6 Aug 2023" class="gt_row gt_right">150,900</td></tr>
+    <tr><th id="stub_1_7" scope="row" class="gt_row gt_left gt_stub">Goats</th>
+<td headers="stub_1_7 Jun 2023" class="gt_row gt_right">53,100</td>
+<td headers="stub_1_7 Jul 2023" class="gt_row gt_right">48,000</td>
+<td headers="stub_1_7 Aug 2023" class="gt_row gt_right">54,300</td></tr>
   </tbody>
   
   
@@ -1446,28 +1446,28 @@ toc: no
       </th>
     </tr>
     <tr class="gt_col_headings">
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="May 13, 2023">May 13, 2023</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="May 20, 2023">May 20, 2023</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="May 27, 2023">May 27, 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Sep 09, 2023">Sep 09, 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Sep 16, 2023">Sep 16, 2023</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Sep 23, 2023">Sep 23, 2023</th>
     </tr>
   </thead>
   <tbody class="gt_table_body">
-    <tr><th id="stub_1_1" scope="row" class="gt_row gt_center gt_stub">Cattle</th>
-<td headers="stub_1_1 May 13, 2023" class="gt_row gt_center">644300</td>
-<td headers="stub_1_1 May 20, 2023" class="gt_row gt_center">640300</td>
-<td headers="stub_1_1 May 27, 2023" class="gt_row gt_center">625000</td></tr>
-    <tr><th id="stub_1_2" scope="row" class="gt_row gt_center gt_stub">Hogs</th>
-<td headers="stub_1_2 May 13, 2023" class="gt_row gt_center">2361500</td>
-<td headers="stub_1_2 May 20, 2023" class="gt_row gt_center">2407000</td>
-<td headers="stub_1_2 May 27, 2023" class="gt_row gt_center">2355100</td></tr>
-    <tr><th id="stub_1_3" scope="row" class="gt_row gt_center gt_stub">Sheep, including lambs</th>
-<td headers="stub_1_3 May 13, 2023" class="gt_row gt_center">33800</td>
-<td headers="stub_1_3 May 20, 2023" class="gt_row gt_center">33700</td>
-<td headers="stub_1_3 May 27, 2023" class="gt_row gt_center">33400</td></tr>
-    <tr><th id="stub_1_4" scope="row" class="gt_row gt_center gt_stub">Goats</th>
-<td headers="stub_1_4 May 13, 2023" class="gt_row gt_center">10232</td>
-<td headers="stub_1_4 May 20, 2023" class="gt_row gt_center">9338</td>
-<td headers="stub_1_4 May 27, 2023" class="gt_row gt_center">10013</td></tr>
+    <tr><th id="stub_1_1" scope="row" class="gt_row gt_left gt_stub">Cattle</th>
+<td headers="stub_1_1 Sep 09, 2023" class="gt_row gt_right">558,900</td>
+<td headers="stub_1_1 Sep 16, 2023" class="gt_row gt_right">631,200</td>
+<td headers="stub_1_1 Sep 23, 2023" class="gt_row gt_right">626,600</td></tr>
+    <tr><th id="stub_1_2" scope="row" class="gt_row gt_left gt_stub">Hogs</th>
+<td headers="stub_1_2 Sep 09, 2023" class="gt_row gt_right">2,245,300</td>
+<td headers="stub_1_2 Sep 16, 2023" class="gt_row gt_right">2,535,500</td>
+<td headers="stub_1_2 Sep 23, 2023" class="gt_row gt_right">2,546,600</td></tr>
+    <tr><th id="stub_1_3" scope="row" class="gt_row gt_left gt_stub">Sheep, including lambs</th>
+<td headers="stub_1_3 Sep 09, 2023" class="gt_row gt_right">31,900</td>
+<td headers="stub_1_3 Sep 16, 2023" class="gt_row gt_right">35,800</td>
+<td headers="stub_1_3 Sep 23, 2023" class="gt_row gt_right">35,000</td></tr>
+    <tr><th id="stub_1_4" scope="row" class="gt_row gt_left gt_stub">Goats</th>
+<td headers="stub_1_4 Sep 09, 2023" class="gt_row gt_right">9,377</td>
+<td headers="stub_1_4 Sep 16, 2023" class="gt_row gt_right">10,370</td>
+<td headers="stub_1_4 Sep 23, 2023" class="gt_row gt_right">10,141</td></tr>
   </tbody>
   
   
